force-app/main/default/objects/bpats__ATS_Applicant__c/bpats__ATS_Applicant__c.object-meta.xml
<CustomObject>
    <label>ATS Applicant</label>
    <nameField>
        <displayFormat>APP-{00000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATS Applicants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>