force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>bpats__Applicant_Email__c</fullName>
    <formula>bpats__ATS_Applicant__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Email</label>
    <type>Text</type>
</CustomField>