force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Applicant_Name__c</fullName>
    <formula>bpats__ATS_Applicant__r.FirstName &amp; &quot; &quot; &amp; bpats__ATS_Applicant__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>