force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Applicant_Status__c.field-meta.xml
<CustomField>
    <fullName>bpats__Applicant_Status__c</fullName>
    <label>Applicant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>