force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Application_Notes__c.field-meta.xml
<CustomField>
    <fullName>bpats__Application_Notes__c</fullName>
    <label>Application Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>