force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Asymbl_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>bpats__Asymbl_Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant Withdrew</fullName>
            </value>
            <value>
                <fullName>Client Rejected</fullName>
            </value>
            <value>
                <fullName>Internal Rejection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>