force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__ATS_Applicant__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Applied Jobs</relationshipLabel>
    <relationshipName>ATS_Applicants</relationshipName>
    <type>Lookup</type>
</CustomField>