force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>bpats__Bill_Rate__c</fullName>
    <label>Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>