force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Contact_Job_Relationship__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contact_Job_Relationship__c</fullName>
    <label>Contact Job Relationship</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>