force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Current_Stage_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Current_Stage_Date__c</fullName>
    <label>Current Stage Date</label>
    <type>Date</type>
</CustomField>