force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Days_in_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>bpats__Days_in_Current_Stage__c</fullName>
    <description>Days in Current Stage</description>
    <formula>today() - bpats__Current_Stage_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>