force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Days_Since_Initial_Application__c.field-meta.xml
<CustomField>
    <fullName>bpats__Days_Since_Initial_Application__c</fullName>
    <formula>today()- bpats__Initial_Application_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Initial Application</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>