force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Hiring_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Hiring_Manager_Name__c</fullName>
    <formula>bpats__Job__r.bpats__Hiring_Manager__r.FirstName &amp; &apos; &apos; &amp; bpats__Job__r.bpats__Hiring_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hiring Manager&apos;s Name</label>
    <type>Text</type>
</CustomField>