force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Initial_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Initial_Application_Date__c</fullName>
    <label>Initial Application Date</label>
    <type>Date</type>
</CustomField>