force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Internal_Source__c.field-meta.xml
<CustomField>
    <fullName>bpats__Internal_Source__c</fullName>
    <label>Internal Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>