force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Job__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>bpats__Job__c</referenceTo>
    <relationshipLabel>Applicants</relationshipLabel>
    <relationshipName>Job_Applicants1</relationshipName>
    <type>Lookup</type>
</CustomField>