force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Job_Board_Applicant__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job_Board_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Board Applicant</label>
    <type>Checkbox</type>
</CustomField>