force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Recruited_By__c.field-meta.xml
<CustomField>
    <fullName>bpats__Recruited_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruited By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Applicants1</relationshipName>
    <type>Lookup</type>
</CustomField>