force-app/main/default/objects/bpats__ATS_Applicant__c/fields/bpats__Stage__c.field-meta.xml
<CustomField>
    <fullName>bpats__Stage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>ATS Stage</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>bpats__ATS_Stage__c.bpats__Job__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.bpats__Job__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>bpats__ATS_Stage__c</referenceTo>
    <relationshipLabel>ATS Applicants</relationshipLabel>
    <relationshipName>ATS_Applicants</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>