force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Compensation__c.field-meta.xml
<CustomField>
    <fullName>Compensation__c</fullName>
    <formula>IF(NOT(ISBLANK( bpats__Salary__c )), bpats__Salary__c, bpats__Pay_Rate__c )</formula>
    <label>Compensation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>