force-app/main/default/objects/bpats__ATS_Applicant__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <formula>TEXT( bpats__Job__r.bpats__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Status</label>
    <type>Text</type>
</CustomField>